--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="panel-primary pt-10">
   <h1 class="h1 text-center txt-primary">
     <fa-icon [icon]="faAddressBook" aria-hidden="true"></fa-icon>
-    Phone Book App
+    Kurasa Phone Book App
   </h1>
 </header>
 
